RESOLVED FIXED151719
[iOS] Abrupt transition between Fullscreen -> PiP
https://bugs.webkit.org/show_bug.cgi?id=151719
Summary [iOS] Abrupt transition between Fullscreen -> PiP
Jer Noble
Reported 2015-12-01 13:16:24 PST
[iOS] Abrupt transition between Fullscreen -> PiP
Attachments
Patch (2.08 KB, patch)
2015-12-01 13:19 PST, Jer Noble
no flags
Patch (1.55 KB, patch)
2015-12-02 14:57 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2015-12-01 13:19:00 PST
Jer Noble
Comment 2 2015-12-01 13:19:34 PST
Eric Carlson
Comment 3 2015-12-01 13:23:12 PST
Comment on attachment 266384 [details] Patch Nice simple fix! r=me
WebKit Commit Bot
Comment 4 2015-12-01 13:24:35 PST
Attachment 266384 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1333: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5 2015-12-01 15:53:17 PST
Comment on attachment 266384 [details] Patch Clearing flags on attachment: 266384 Committed r192922: <http://trac.webkit.org/changeset/192922>
WebKit Commit Bot
Comment 6 2015-12-01 15:53:20 PST
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 7 2015-12-02 14:57:14 PST
Reopening to attach new patch.
Jer Noble
Comment 8 2015-12-02 14:57:15 PST
Jer Noble
Comment 9 2015-12-02 15:01:43 PST
Note You need to log in before you can comment on or make changes to this bug.