[iOS] Abrupt transition between Fullscreen -> PiP https://bugs.webkit.org/show_bug.cgi?id=151719

Reviewed by Eric Carlson.

Rather than abruptly hiding the fullscreen window, explicitly exit fullscreen mode upon entering PiP.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::didStartPictureInPicture):


Canonical link: https://commits.webkit.org/169872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192922 268f45cc-cd09-0410-ab3c-d52691b4dbfc